styles/sidebar.scss
.sidebar {
    @apply 
    absolute
    md:relative
    inset-0
    z-50
    flex
    flex-row
    pointer-events-none;

    * {
        @apply 
        ease-out
        duration-200
        pointer-events-auto;
    }

    .toggle {
        @apply hidden;
    }

    .content {
        @apply 
        h-full 
        w-72  
        flex-none
        bg-white 
        border-r 
        border-slate-300
        relative
        -left-full
        md:left-0;
    }

    .deadspace {
        @apply 
        opacity-0
        w-full
        flex-1
        bg-slate-900
        relative
        -left-full;
    }

    .toggle:checked {
        ~.content {
            @apply 
            left-0;
        }

        ~.deadspace {
            @apply 
            left-0
            opacity-10;
        }
    }
}

